--- a/TASK1-Image-Gallery/index.html
+++ b/TASK1-Image-Gallery/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Gallery</title>
-    <link rel="stylesheet" href="gallery.css">
+    <title>Our Image Gallery</title>
 
-    <!-- Smooth Scrolling -->
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+
     <style>
-        html {
-            scroll-behavior: smooth;
-        }
+        html { scroll-behavior: smooth; }
     </style>
 </head>
-<body id="home">
+<body>
 
   <!-- NAVBAR -->
   <nav class="navbar">
@@ -25,42 +26,67 @@
       </ul>
   </nav>
 
-  <!-- Heading -->
-  <h1 class="title">Image Gallery</h1>
+  <!-- HERO SLIDER SECTION -->
+  <section class="hero" id="home">
+
+      <div class="slider">
+          <img src="slider1.png" class="slide active">
+          <img src="slider2.png" class="slide">
+          <img src="slider3.png" class="slide">
+      </div>
+
+      <!-- Text on slider -->
+      <div class="hero-content">
+          <h1>Our Image Gallery</h1>
+          <p>Explore Creativity and Beautiful Moments</p>
+      </div>
+
+      <!-- Dots -->
+      <div class="dots">
+          <span class="dot active" onclick="showSlide(0)"></span>
+          <span class="dot" onclick="showSlide(1)"></span>
+          <span class="dot" onclick="showSlide(2)"></span>
+      </div>
+
+  </section>
+
+  <!-- GALLERY LABEL -->
+  <h2 class="section-label">Images</h2>
 
   <!-- GALLERY SECTION -->
   <section id="gallery-section">
       <div class="gallery">
           <div class="gallery-item">
-            <img src="image1.png" alt="">
-            <img src="image2.png" alt="">
-            <img src="image3.png" alt="">
-            <img src="image4.png" alt="">
-            <img src="image5.png" alt="">
-            <img src="image6.png" alt="">
-            <img src="coding.png" alt="">
-            <img src="coding1.png" alt="">
-            <img src="image7.png" alt="">
-            <img src="image8.png" alt="">
-            <img src="image-car.png" alt="">
-            <img src="image-car1.png" alt="">
-            <img src="image-car2.png" alt="">
-            <img src="image-car3.png" alt="">
-            <img src="image-car4.png" alt="">
-            <img src="image9.png" alt="">
-            <img src="img01.jpg" alt="">
-            <img src="img02.jpg" alt="">
-            <img src="img1.png" alt="">
-             <img src="coding3.png" alt="">
-            <img src="img2.png" alt="">
-            <img src="img3.png" alt="">
-            <img src="img4.png" alt="">
-            <img src="img5.png" alt="">
-            <img src="img6.png" alt="">
-            <img src="img7.png" alt="">
-            <img src="img8.png" alt="">
-            <img src="img08.jpg" alt="">
-            <img src="img09.jpg" alt="">
+
+              <img src="image1.png">
+              <img src="image2.png">
+              <img src="image3.png">
+              <img src="image4.png">
+              <img src="image5.png">
+              <img src="image6.png">
+              <img src="coding.png">
+              <img src="coding1.png">
+              <img src="image7.png">
+              <img src="image8.png">
+              <img src="image-car.png">
+              <img src="image-car1.png">
+              <img src="image-car2.png">
+              <img src="image-car3.png">
+              <img src="image-car4.png">
+              <img src="image9.png">
+              <img src="img01.jpg">
+              <img src="img02.jpg">
+              <img src="img1.png">
+              <img src="coding3.png">
+              <img src="img2.png">
+              <img src="img3.png">
+              <img src="img4.png">
+              <img src="img5.png">
+              <img src="img6.png">
+              <img src="img7.png">
+              <img src="img8.png">
+              <img src="img08.jpg">
+              <img src="img09.jpg">
 
           </div>
       </div>
@@ -71,12 +97,12 @@
       <h2>About</h2>
       <p>
           This Image Gallery project is created as a part of my CodeAlpha Frontend Development Internship.
-It showcases my skills in HTML, CSS, and JavaScript, including responsive design,
-hover animations, smooth scrolling, and a modern lightbox feature with navigation.
-© 2025 Saurav Kumar. All rights reserved.
-
+          It showcases my skills in HTML, CSS, and JavaScript, including responsive design,
+          hover animations, smooth scrolling, and a modern lightbox feature with navigation.  
+          <br><br>© 2025 Saurav Kumar. All rights reserved.
       </p>
-  </section>
+</section>
+
 
   <!-- LIGHTBOX -->
   <div id="lightbox" class="hidden">
@@ -86,8 +112,7 @@ hover animations, smooth scrolling, and a modern lightbox feature with navigatio
       <button id="next">Next</button>
   </div>
 
-  <!-- JS FILE -->
-  <script src="gallery.js"></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
